# drug-intelligence

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: data-change.md  docs.md  experiment.md
.github/workflows/: ci.yml
configs/: sample-gin.toml
docs/: architecture.md  data-card-public-fixtures.md  experiment-log.md  gnn-benchmark.md  knowledge-graph.md  licensing.md  model-card-gnn-baseline.md  public-safety-audit.md  publication-boundary.md  roadmap.md  safety.md
examples/: README.md  sample_drugs.jsonl  sample_interactions.jsonl  sample_references.jsonl
notebooks/: README.md
reports/: 2026-06-09-legacy-baseline-audit.md  README.md
reports/sample-benchmark/: sample-benchmark-metrics.json  sample-benchmark-report.md
reports/sample-kg/: sample-kg.cypher  sample-kg.json
scripts/: README.md  export_kg_sample.py  train_gnn_baseline.py
src/drug_intelligence/: __init__.py
src/drug_intelligence/benchmarking/: __init__.py  sample_dataset.py  splits.py  train.py
src/drug_intelligence/chemistry/: __init__.py  graph_conversion.py  rdkit_features.py
src/drug_intelligence/data/: __init__.py  schemas.py
src/drug_intelligence/evals/: __init__.py  metrics.py
src/drug_intelligence/graph/: __init__.py  builder.py  cypher.py  schema.py  validation.py
tests/: test_graph_conversion.py  test_interaction_loader.py  test_knowledge_graph.py  test_metrics.py  test_package_metadata.py  test_pair_model.py  test_public_fixtures.py  test_rdkit_features.py  test_sample_benchmark.py  test_schemas.py  test_splits.py
(+4 files in other folders)
