[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-intelligence"
version = "0.1.0"
description = "Public-safe biomedical AI research scaffolding for drug interaction reasoning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Amir Azadfar" }
]
keywords = [
  "biomedical-ai",
  "drug-interactions",
  "graph-neural-networks",
  "knowledge-graphs",
  "rdkit",
  "retrieval-augmented-generation"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5"
]
chem = [
  "rdkit>=2024.3"
]
gnn = [
  "torch>=2.4",
  "torch-geometric>=2.6"
]
retrieval = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
